--- a/style.css
+++ b/style.css
@@ -18,6 +18,9 @@ body {
 }
 
 header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 30px 15px;
     border-bottom: 1px solid rgba(100, 100, 100, .5);
 }
@@ -35,6 +38,72 @@ header img {
     top: 15px;
     left: 230px;
     width: 80px;
+}
+
+#dark-mode {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+#dark-mode-text {
+    margin-right: 15px;
+    font-weight: 700;
+}
+
+.switch {
+    position: absolute;
+    margin-left: -9999px;
+    visibility: hidden;
+}
+
+.switch + label {
+    display: block;
+    position: relative;
+    cursor: pointer;
+    outline: none;
+    user-select: none;
+}
+
+.switch--shadow + label {
+    padding: 2px;
+    width: 40px;
+    height: 20px;
+    background: #DDD;
+    border-radius: 20px;
+}
+
+.switch--shadow + label:before,
+.switch--shadow + label:after {
+    display: block;
+    position: absolute;
+    top: 1px;
+    left: 1px;
+    bottom: 1px;
+    content: '';
+}
+
+.switch--shadow + label:before {
+    right: 1px;
+    background: #F1F1F1;
+    border-radius: 20px;
+    transition: all 0.4s;
+}
+
+.switch--shadow + label:after {
+    width: 20px;
+    background-color: #FFF;
+    border-radius: 100%;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    transition: all 0.4s;
+}
+
+.switch--shadow:checked + label:before {
+    background: #8CE196;
+}
+
+.switch--shadow:checked + label:after {
+    transform: translateX(20px);
 }
 
 #content {
@@ -117,21 +186,18 @@ button:active, button:hover {
     margin-right: 30px;
 }
 
-#error-message {
+#warn-message {
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    font-size: 14px;
+    font-weight: 700;
 }
 
 #warn-icon {
     width: 24px;
     height: 24px;
     margin-right: 15px;
-}
-
-#error-message p{
-    font-size: 14px;
-    font-weight: 700;
 }
 
 footer {
@@ -147,3 +213,11 @@ footer {
     background: #333;
     color: #FFF;
 }
+
+/*body {
+    height: 100vh;
+    background: #333;
+    color: #FFF;
+    font-family: "Comfortaa", sans-serif;
+    font-weight: 400;
+}*/
